# napari-tissuumaps

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.napari/: config.yml
docs/: generate_doc.sh  index.md
napari_tissuumaps/: __init__.py  _writer.py  convert.py
napari_tissuumaps/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
napari_tissuumaps/utils/: io.py
src/napari_tissuumaps/: __init__.py  _version.py  _writer.py  convert.py  napari.yaml
src/napari_tissuumaps/_tests/: test_writer.py
src/napari_tissuumaps/_tests/assets/: labels.tif  points.csv  shapes.csv
