[metadata]
name = napari-tissuumaps
version = 0.0.7
author = Nicolas Pielawski
author_email = nicolas@pielawski.fr
url = https://github.com/wahlby-lab/napari-tissuumaps
license = MIT
description = A plugin to add compatibility with Tissuumaps
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/wahlby-lab/napari-tissuumaps/issues
    Documentation = https://github.com/wahlby-lab/napari-tissuumaps#README.md
    Source Code = https://github.com/wahlby-lab/napari-tissuumaps
    User Support = https://github.com/wahlby-lab/napari-tissuumaps/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points]
napari.plugin =
    napari-tissuumaps = napari_tissuumaps
