[metadata]
name = napari_tissuumaps
description = A plugin to export Napari projects to TissUUmaps.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Pielawski
author_email = nicolas@pielawski.fr
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-tissuumaps = napari_tissuumaps:napari.yaml

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
* = *.yaml
